Fix tabs control not stretching

--- a/src/css/items/tabs.scss
+++ b/src/css/items/tabs.scss
@@ -1,3 +1,8 @@
+.istox-tabs-container {
+  display: flex;
+  flex: 1;
+}
+
 .istox-tabs {
   display: flex;
   flex-direction: column;
